--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dinero.js": "2.0.0-alpha.8",
     "firebase": "10.8.0",
     "geist": "1.2.0",
+    "interval-hooks": "0.2.0",
     "lucide-react": "0.341.0",
     "next": "14.0.5-canary.42",
     "react": "18.2.0",
