--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "2.1.0",
     "date-fns": "3.1.0",
     "dinero.js": "2.0.0-alpha.8",
-    "firebase": "10.8.0",
+    "firebase": "10.11.1",
     "geist": "1.2.0",
     "interval-hooks": "0.2.0",
     "lucide-react": "0.341.0",
@@ -41,6 +41,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@builder.io/sdk-react": "1.0.27",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.10.7",
@@ -48,13 +49,21 @@
     "@types/react-dom": "18.2.18",
     "@vercel/git-hooks": "1.0.0",
     "autoprefixer": "10.4.16",
+    "builder.io": "1.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "launch-editor": "2.6.1",
     "lint-staged": "15.2.0",
     "postcss": "8.4.33",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "undici@<5.28.4": ">=5.28.4",
+      "undici@<=5.28.2": ">=5.28.3"
+    }
   }
 }
